<resources>
    <string name="app_name">Alarmy app</string>
    <string name="alarm">Alarm</string>
    <string name="next_alarm">Next alarm</string>
    <string name="_07_30">07:30</string>
    <string name="_23_44">23:44</string>
    <string name="_09_00">09:00</string>
    <string name="history">History</string>
    <string name="today_s_panel">Today \'s panel</string>
    <string name="setting">Setting</string>
    <string name="snooze">Snooze</string>
    <string name="ch">CH</string>
    <string name="_01">01</string>
    <string name="sa">Sa</string>
    <string name="s">S</string>
    <string name="todo">TODO</string>
    <string name="label">Label</string>
    <string name="haicham">:</string>
    <string name="m">M</string>
    <string name="wake_up_check">Wake Up Check</string>
    <string name="mission">Mission</string>
    <string name="ringtone">Ringtone</string>
    <string name="save">Save</string>
    <string name="ring_in_22_hours_and_16">Ring in 22 hours and 16</string>
    <string name="x_a">Xóa</string>
    <string name="f">F</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="sound_power_pack">Sound Power Pack</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="_03">03</string>
    <string name="_02">02</string>
    <string name="_00">00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
</resources>