<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2F0"
    tools:context=".Selection">

    <Button
        android:id="@+id/button19"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#9A9292"
        android:text="@string/s"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button22"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="#FF0000"
        android:text="@string/w"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button23"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FF0000"
        android:text="@string/t"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button24"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FF0000"
        android:text="@string/f"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button23"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button25"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="#9A9292"
        android:text="@string/s"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button20"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:background="#FF0000"
        android:text="@string/m"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <Button
        android:id="@+id/button21"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="#FF0000"
        android:text="@string/t"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="67dp"
        android:layout_height="44dp"
        android:background="#F3F2F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/design_ic_visibility"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="27dp"
        android:layout_height="142dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/haicham"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/button18"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:background="#F3F2F0"
        android:text="@string/back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="390dp"
        android:layout_height="26dp"
        android:background="#9A9292"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ring_in_22_hours_and_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <Button
        android:id="@+id/button27"
        android:layout_width="401dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_baseline_vibration_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="left"
        android:text="@string/mission"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:drawableStart="@drawable/ic_baseline_vibration_24" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="231dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:indeterminateDrawable="@drawable/abc_ic_menu_cut_mtrl_alpha"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="68dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_baseline_vibration_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/button27"
        android:drawableStart="@drawable/ic_baseline_vibration_24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="46dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button27"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_volume_up_24"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="56dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="56dp">

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_2"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="104dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_3"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="152dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_4"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="200dp" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="59dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="56dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_00"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_01"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="104dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/_02"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="152dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_03"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="54dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="56dp">

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/sa"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F2F0"
                android:text="@string/ch"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="260dp"
                tools:layout_editor_absoluteY="104dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="396dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_baseline_music_note_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="center_horizontal|left"
        android:text="@string/ringtone"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:drawableStart="@drawable/ic_baseline_music_note_24"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24" />

    <Button
        android:id="@+id/button10"
        android:layout_width="398dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_baseline_speaker_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="center_horizontal|left"
        android:text="@string/sound_power_pack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:drawableStart="@drawable/ic_baseline_speaker_24"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24" />

    <Button
        android:id="@+id/button12"
        android:layout_width="400dp"
        android:layout_height="49dp"
        android:drawableLeft="@drawable/ic_baseline_alarm_on_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="center_horizontal|left"
        android:text="@string/wake_up_check"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="0.0"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24" />

    <Button
        android:id="@+id/button13"
        android:layout_width="402dp"
        android:layout_height="52dp"
        android:drawableLeft="@drawable/icon_alarm_snooze"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="center_horizontal|left"
        android:text="@string/snooze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/button16"
        android:layout_width="399dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="#FF0000"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="397dp"
        android:layout_height="47dp"
        android:text="@string/x_a"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button26"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/button26"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_baseline_local_offer_24"
        android:drawableLeft="@drawable/ic_baseline_local_offer_24"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:gravity="center_horizontal|left"
        android:text="@string/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

</androidx.constraintlayout.widget.ConstraintLayout>